Rework on deletion of finallog
There seems to be a
[bug](https://hibernate.atlassian.net/browse/HHH-18967) in Hibernate 6
where the deletion of elements happen before deletion of the row in the
main table. Because of that, deletion of the row never happens since it
doesn't match the search query. I had to manually delete the rows
instead as a workaround.

The other change in this commit is that we are now using Postgresql in
our tests rather than H2. H2 exhibited weird issues with comparison for
timestamp. It didn't seem to be able to convert the timestamp with
timezone properly.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -52,12 +52,6 @@ quarkus:
     cors:
       ~: true
       origins: "/.*/"
-  datasource:
-    db-kind: ${QUARKUS_DATASOURCE:postgresql}
-    jdbc:
-      url: ${QUARKUS_DATASOURCE_URL:}
-    username: ${QUARKUS_DATASOURCE_USERNAME:}
-    password: ${QUARKUS_DATASOURCE_PASSWORD:}
   shutdown:
     timeout: 30
 
@@ -89,6 +83,15 @@ bifrost:
     timeOutMillis: 300000
   defaultSourceFetchSize: 100
   sourcePollThreads: 4
+
+'%prod':
+  datasource:
+    db-kind: ${QUARKUS_DATASOURCE:postgresql}
+    jdbc:
+      url: ${QUARKUS_DATASOURCE_URL:}
+    username: ${QUARKUS_DATASOURCE_USERNAME:}
+    password: ${QUARKUS_DATASOURCE_PASSWORD:}
+
 '%test':
   mp:
     messaging:
@@ -110,16 +113,13 @@ bifrost:
       console:
         json: false
     datasource:
-      jdbc:
-        url: jdbc:h2:tcp://localhost/mem:test
-      db-kind: h2
+      db-kind: postgresql
+      devservices:
+        show-logs: true
+        enabled: true
     hibernate-orm:
       database:
         generation: drop-and-create
-      log:
-        sql: true
-        bind-parameters: true
-      statistics: true
     devservices:
       enabled: true
   bifrost:
