Revert "Update to Quarkus 3"

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
   <properties>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.17.5</quarkus.platform.version>
+    <quarkus.platform.version>2.16.12.Final</quarkus.platform.version>
+    <quarkus.package.type>uber-jar</quarkus.package.type>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
     <failsafe.useModulePath>false</failsafe.useModulePath>
     <maven.compiler.release>17</maven.compiler.release>
@@ -45,11 +46,10 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <surefire-plugin.version>3.5.2</surefire-plugin.version>
     <version.elasticSearch>5.6.15</version.elasticSearch>
-    <quarkus.package.jar.type>uber-jar</quarkus.package.jar.type>
+    <quarkus.package.type>uber-jar</quarkus.package.type>
     <elasticsearch.maven.plugin.version>6.23</elasticsearch.maven.plugin.version>
     <excludeTags>debug-test</excludeTags>
     <tagSuffix />
-    <quarkus.package.jar.type>uber-jar</quarkus.package.jar.type>
   </properties>
 
   <scm>
@@ -93,11 +93,19 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-rest-jackson</artifactId>
+      <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-messaging-kafka</artifactId>
+      <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -138,20 +146,12 @@
     <dependency>
       <groupId>org.jboss.pnc</groupId>
       <artifactId>pnc-api</artifactId>
-      <classifier>jakarta</classifier>
-      <version>3.0.5</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.pnc</groupId>
       <artifactId>pnc-common</artifactId>
-      <classifier>jakarta</classifier>
       <version>3.0.1</version>
-      <exclusions>
-        <exclusion>  <!-- don't pull in regular pnc-api, we need the jakarta one -->
-          <groupId>org.jboss.pnc</groupId>
-          <artifactId>pnc-api</artifactId>
-        </exclusion>
-      </exclusions> 
     </dependency>
     <dependency>
       <groupId>com.thetransactioncompany</groupId>
@@ -175,7 +175,17 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy-client-jackson</artifactId>
+      <artifactId>quarkus-jdbc-h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-test-h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-rest-client-jackson</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -184,7 +194,11 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-opentelemetry</artifactId>
+      <artifactId>quarkus-opentelemetry-exporter-otlp</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-context</artifactId>
     </dependency>
     <dependency>
       <groupId>org.elasticsearch.client</groupId>
@@ -259,9 +273,9 @@
           </execution>
         </executions>
         <configuration>
-          <systemPropertyVariables>
+          <systemProperties>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-          </systemPropertyVariables>
+          </systemProperties>
         </configuration>
       </plugin>
       <plugin>
