--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -52,16 +52,21 @@ quarkus:
     cors:
       ~: true
       origins: "/.*/"
+  datasource:
+    db-kind: ${QUARKUS_DATASOURCE:postgresql}
+    jdbc:
+      url: ${QUARKUS_DATASOURCE_URL:}
+    username: ${QUARKUS_DATASOURCE_USERNAME:}
+    password: ${QUARKUS_DATASOURCE_PASSWORD:}
   shutdown:
     timeout: 30
 
-  otel:
+  opentelemetry:
     enabled: true
-    resource:
-      attributes: "sampler_ratio=0.05,service.name=bifrost"
-    traces:
+    tracer:
       enabled: true
       # reflect sampling on collector
+      resource-attributes: "sampler_ratio=0.05,service.name=bifrost"
       sampler:
         ratio: 0.05
       exporter:
@@ -83,15 +88,6 @@ bifrost:
     timeOutMillis: 300000
   defaultSourceFetchSize: 100
   sourcePollThreads: 4
-
-'%prod':
-  datasource:
-    db-kind: ${QUARKUS_DATASOURCE:postgresql}
-    jdbc:
-      url: ${QUARKUS_DATASOURCE_URL:}
-    username: ${QUARKUS_DATASOURCE_USERNAME:}
-    password: ${QUARKUS_DATASOURCE_PASSWORD:}
-
 '%test':
   mp:
     messaging:
@@ -113,13 +109,16 @@ bifrost:
       console:
         json: false
     datasource:
-      db-kind: postgresql
-      devservices:
-        show-logs: true
-        enabled: true
+      jdbc:
+        url: jdbc:h2:tcp://localhost/mem:test
+      db-kind: h2
     hibernate-orm:
       database:
         generation: drop-and-create
+      log:
+        sql: true
+        bind-parameters: true
+      statistics: true
     devservices:
       enabled: true
   bifrost:
