--- a/pom.xml
+++ b/pom.xml
@@ -292,21 +292,19 @@
           <configuration>
               <tagNameFormat>@{project.version}${tagSuffix}</tagNameFormat>
               <autoVersionSubmodules>true</autoVersionSubmodules>
-              <stagingRepository>https://oss.sonatype.org/service/local/staging/deploy/maven2/</stagingRepository>
               <releaseProfiles>release</releaseProfiles>
               <goals>deploy</goals>
           </configuration>
        </plugin>
        <plugin>
-          <groupId>org.sonatype.plugins</groupId>
-          <artifactId>nexus-staging-maven-plugin</artifactId>
-          <version>1.7.0</version>
-          <extensions>true</extensions>
-          <configuration>
-              <serverId>ossrh</serverId>
-              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>false</autoReleaseAfterClose>
-          </configuration>
+           <groupId>org.sonatype.central</groupId>
+           <artifactId>central-publishing-maven-plugin</artifactId>
+           <version>0.8.0</version>
+           <extensions>true</extensions>
+           <configuration>
+               <!-- as defined in your settings.xml -->
+               <publishingServerId>central-publisher</publishingServerId>
+           </configuration>
        </plugin>
        <plugin>
            <groupId>pl.project13.maven</groupId>
@@ -473,14 +471,6 @@
       <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
       <snapshots>
         <enabled>true</enabled>
-      </snapshots>
-    </repository>
-
-    <repository>
-      <id>Nexus Staging</id>
-      <url>https://oss.sonatype.org/content/groups/staging</url>
-      <snapshots>
-        <enabled>false</enabled>
       </snapshots>
     </repository>
   </repositories>
