--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,53 +1,16 @@
+# To get started with Dependabot version updates, you'll need to specify which
+# package ecosystems to update and where the package manifests are located.
+# Please see the documentation for all configuration options:
+# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 version: 2
 updates:
-- package-ecosystem: maven
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "13:00"
-    timezone: America/New_York
-  open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: io.quarkus:quarkus-maven-plugin
-    versions:
-    - 1.11.1.Final
-    - 1.11.2.Final
-    - 1.11.3.Final
-    - 1.12.0.Final
-    - 1.12.1.Final
-    - 1.12.2.Final
-    - 1.13.0.Final
-    - 1.13.1.Final
-    - 1.13.2.Final
-  - dependency-name: io.quarkus:quarkus-bom
-    versions:
-    - 1.11.1.Final
-    - 1.11.2.Final
-    - 1.11.3.Final
-    - 1.12.0.Final
-    - 1.12.1.Final
-    - 1.12.2.Final
-    - 1.13.0.Final
-    - 1.13.1.Final
-    - 1.13.2.Final
-  - dependency-name: org.elasticsearch.client:elasticsearch-rest-high-level-client
-    versions:
-    - 7.11.0
-    - 7.11.1
-    - 7.11.2
-    - 7.12.0
-  - dependency-name: org.elasticsearch.client:elasticsearch-rest-client
-    versions:
-    - 7.11.0
-    - 7.11.1
-    - 7.11.2
-    - 7.12.0
-  - dependency-name: com.fasterxml.jackson:jackson-bom
-    versions:
-    - 2.12.2
-  - dependency-name: net.revelc.code.formatter:formatter-maven-plugin
-    versions:
-    - 2.14.0
-  - dependency-name: org.projectlombok:lombok
-    versions:
-    - 1.18.18
+  - package-ecosystem: "maven" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "weekly"
+
+  - package-ecosystem: "github-actions" # Also update Github actions
+    directory: "/"
+    schedule:
+      # Check for updates to GitHub Actions every week
+      interval: "weekly"
