--- a/.github/workflows/maven-pr.yml
+++ b/.github/workflows/maven-pr.yml
@@ -10,20 +10,8 @@ name: Java CI with Maven
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: [ "*" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    call-maven-ci:
+      uses: project-ncl/shared-github-actions/.github/workflows/maven-ci.yml@v0.0.3
